# recipts

./: .env  .gitignore  app.py  pyproject.toml  requirements.txt
pages/google_drive/: auth.py  display_table.py  file_handler.py  input_link.py  main.py
src/: app.py  login.py
src/google_drive/: auth.py  display_table.py  file_handler.py  input_link.py  main.py
text_extractor/: text_extractor.py
