[tool.poetry]
name = "recipts"
version = "0.1.0"
description = ""
authors = ["diogoazevedo15 <68329635+diogoazevedo15@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7"
streamlit = "^1.40.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
